# jinshu

./: .env.example  .gitignore  AI_CONTRACT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  OPEN_CONSTRAINTS.md  PROGRESS.md  README.md  docker-compose.yml
.claude/skills/: README.md
.gitea/workflows/: deploy.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
ai-services/: .gitignore  README.md  pyproject.toml
ai-services/src/jinshu_ai/: __init__.py
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.batch  Dockerfile.worker  README.md  build.gradle.kts  ci.Dockerfile  pom.xml  settings.gradle.kts
backend/api/: build.gradle.kts
backend/batch/: build.gradle.kts
backend/common/: build.gradle.kts
backend/data-sync/: build.gradle.kts
backend/gradle/: libs.versions.toml
backend/worker/: build.gradle.kts
docs/: README.md  代码与设计一致性检查报告.md  代码与设计对应关系.md  任务清单.md
docs/01-立项与架构/: 01.需求文档.md  02.概要设计.md  03.技术选型决策记录.md  04.多租户架构设计.md  05.整体架构分层设计.md  06.数据库架构设计.md  07.补齐与开发计划.md
docs/02-流程与规范/: README.md
docs/03-安全与合规/: 03.JWT认证授权设计.md  04.数据加密标准.md  05.审计日志规范.md  06.权限控制矩阵.md  07.等保三级合规清单.md  08.上线安全检查清单.md  09.API安全与防攻击设计.md  10.隐私与个人信息保护规范.md  README.md
docs/03-模块设计/: 01.报表导入模块设计.md  02.审计日志设计.md  03.报表导出模块设计.md  04.PDF 渲染模块设计.md  05.任务调度模块设计.md  README.md
docs/04-功能设计/: README.md
docs/04-模块设计/: 01.报表导入模块设计.md  02.审计日志设计.md  03.报表导出模块设计.md  04.PDF 渲染模块设计.md  05.任务调度模块设计.md  06.报表全生命周期与权限设计.md  07.消息队列设计.md  08.缓存设计.md  09.文件存储架构设计.md  10.前端架构设计.md  11.动静同构报表展示模块设计.md  12.数据源管理模块设计.md  13.租户管理模块设计.md  14.用户管理模块设计.md  15.系统配置与字典管理模块设计.md  README.md
docs/05-安全与合规/: 01.架构设计.md  02.安全漏洞响应流程.md  README.md
docs/06-运维与部署/: 01.线上故障处理流程.md  02.可观测性设计.md  03.K3s部署指引.md  04.数据库运维手册.md  README.md
docs/07-测试/: 01.单元测试指南.md  02.集成测试指南.md  03.性能基准测试计划.md  04.测试计划.md  README.md
docs/99-附录/: 00.README.md  01.项目开发全流程白皮书.md  02.新人Onboarding指南.md  新人Onboarding指南.md
frontend/: .dockerignore  Dockerfile  ci.Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
k8s/: batch.yaml  configmap.yaml  deployment.yaml  fix-hosts.yaml  infra.yaml  ingress.yaml  kustomization.yaml  ls-certs.yaml  ls-host.yaml  namespace.yaml  postgres-init-cm.yaml  pvc.yaml  rbac.yaml  renderer.yaml  secret-encryption.example.yaml  secret.yaml  service.yaml  servicemonitor.yaml  worker.yaml  write-hosts-toml.yaml  write-hosts-toml2.yaml  write-registries.yaml
native/: .gitignore  Cargo.toml  README.md
native/crates/cli/: Cargo.toml
native/crates/cli/src/: main.rs
native/crates/excel-parser/: Cargo.toml
native/crates/excel-parser/src/: lib.rs
native/crates/wasm-grid/: Cargo.toml
native/crates/wasm-grid/src/: lib.rs
renderer/: .dockerignore  Dockerfile  Dockerfile.base  package.json  pnpm-lock.yaml
renderer/src/: app.js
scripts/: ci.sh  deploy-jinshu.sh  deploy.sh  init_db.sh
sql/ddl/: 01_init_schema.sql  02_import_error_log.sql  README.md  (+2 more)
tasks/: PROGRESS.md  deployment.md  design.md  development.md  optimization.md  roadmap.md
test-data/: README.md
(+375 files in other folders)
