[project]
name = "jinshu-ai"
version = "0.1.0"
description = "Jinshu AI services - LLM report generation, data analytics, ops scripts"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Jinshu Team" }]

dependencies = [
    "structlog>=24.0",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
llm = [
    "openai>=1.30",
    "langchain>=0.2",
]
analytics = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/jinshu_ai --cov-report=term-missing"
