[workspace]
resolver = "2"
members = [
    "crates/excel-parser",
    "crates/wasm-grid",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
authors = ["Jinshu Team"]
repository = "https://github.com/jinshu/jinshu"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.39", features = ["full"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Excel 解析
calamine = "0.25"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
