[package]
name = "jinshu-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Jinshu tenant CLI tool for data import / SDK"

[[bin]]
name = "jinshu"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
