[package]
name = "excel-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "High-performance Excel parser for Jinshu (callable from Java via JNI)"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
calamine.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
